...
    <string name="label_investment_account_total">Total</string>
    <string name="label_investment_account_savings">Savings</string>
    <string name="label_account_name">Name</string>
    <string name="label_account_number">Account Number</string>
    <string name="label_account_transit_number">Transit Number</string>
    <string name="label_account_institution_number">Institution Number</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_amount">Amount</string>
    <string name="label_stock_ask">Ask</string>
    <string name="label_stock_high">High</string>
    <string name="label_stock_low">Low</string>
    <string name="label_stock_open">Open</string>
    <string name="label_stock_volume">Vol</string>
    <string name="label_stock_last_trade">Last Trade</string>
...
    <string name="button_open_account">Open this account</string>
    <string name="button_buy_sell">Buy / Sell</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>

    <string name="dialog_title_transfer_incomplete">Transfer not completed</string>
    <string name="dialog_title_transfer_confirmation">Transfer confirmation</string>
    <string name="dialog_title_transfer_complete">Transfer completed</string>
    <string name="dialog_title_open_account_confirmation">Open account confirmation</string>
    <string name="dialog_message_open_account_confirmation">Open %1$s?</string>
    <string name="dialog_title_order_incomplete">Order not completed</string>
    <string name="dialog_title_order_confirmation">Order confirmation</string>
    <string name="dialog_title_order_complete">Order completed</string>

...
