<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="transferViewModel"
            type="com.example.cache.ui.transfer.TransferViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.transfer.TransferFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_border_bottom">

            <TextView
                android:id="@+id/title_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/title_transfer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@+id/title_transfer"
                app:layout_constraintBottom_toBottomOf="@+id/title_transfer"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/content_description_close" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_list">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_border_bottom"
                    android:paddingLeft="18dp"
                    android:paddingTop="10dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/label_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/label_from"
                        android:textAlignment="textStart"
                        android:textSize="10sp"
                        android:textColor="@color/gray_two"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp" />

                    <Spinner
                        android:id="@+id/from_account_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectedItemPosition="@={transferViewModel.fromAccountItemPosition}"
                        android:background="@drawable/background_spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_from" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_border_bottom"
                    android:paddingLeft="18dp"
                    android:paddingTop="10dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/label_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_amount"
                        android:textAlignment="textStart"
                        android:textSize="10sp"
                        android:textColor="@color/gray_two"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/amount_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_amount"
                        android:inputType="numberDecimal"
                        android:text="@={transferViewModel.amount}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_amount" />

                    <ToggleButton
                        android:id="@+id/amount_currency_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="45dp"
                        android:minHeight="30dp"
                        android:background="@drawable/background_toggle_button"
                        android:checked="@={transferViewModel.useFromAccountCurrency}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingTop="10dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/label_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/label_to"
                        android:textSize="10sp"
                        android:textAlignment="textStart"
                        android:textColor="@color/gray_two"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp" />

                    <Spinner
                        android:id="@+id/to_account_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectedItemPosition="@={transferViewModel.toAccountItemPosition}"
                        android:background="@drawable/background_spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_to" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_instant_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_instant_transfer"
                android:textSize="11sp"
                android:textAlignment="textStart"
                android:textColor="@color/gray_two"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/transfer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/button_continue"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:backgroundTint="@color/tealish"
                android:padding="20dp"
                android:onClick="@{() -> transferViewModel.onTransfer()}" />

        </LinearLayout>

    </LinearLayout>

</layout>

