...
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleType="center"
            app:elevation="0dp"
            app:fabCustomSize="48dp"
            app:srcCompat="@drawable/ic_up_arrow" />

    </LinearLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/fabContainer"
        app:layout_constraintHorizontal_bias="1.0"
...
