...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transfer"
        android:enabled="false"
        android:title="@string/title_move_money" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts"
...
